// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Data generation for noir tests Computes contract info for defaultContract 1`] = `
{
  "address": "AztecAddress { inner: 0x019da16a2eb4db748710f7fffa7940dbbacd6345f34d6dbb6a7847941920356a }",
  "artifact_hash": "0x0000000000000000000000000000000000000000000000000000000000003039",
  "contract_address_salt": "0x000000000000000000000000000000000000000000000000000000000000ddd5",
  "contract_class_id": "ContractClassId { inner: 0x16fcb2b009e466987896f03b577530e2751044604834706b4798718ab8c0bfb9 }",
  "deployer": "AztecAddress { inner: 0x0000000000000000000000000000000000000000000000000000000000000000 }",
  "partial_address": "PartialAddress { inner: 0x0cdea49e43fb9b43df9c24d7445a010fa965b33270d073870422699b61e9dee8 }",
  "private_functions_root": "0x061c463b7081a00225202f820b1727b4f3de765b33bc73c2e790938d3cc602a7",
  "public_bytecode_commitment": "0x256abef672381d551191d5bbecf2dec6ac9cc2a81189f886ac22e29e5c58c49c",
  "public_keys": "PublicKeys { inner: 0x01498945581e0eb9f8427ad6021184c700ef091d570892c437d12c7d90364bbd170ae506787c5c43d6ca9255d571c10fa9ffa9d141666e290c347c5c9ab7e34400c044b05b6ca83b9c2dbae79cc1135155956a64e136819136e9947fe5e5866c1c1f0ca244c7cd46b682552bff8ae77dea40b966a71de076ec3b7678f2bdb1511b00316144359e9a3ec8e49c1cdb7eeb0cedd190dfd9dc90eea5115aa779e287080ffc74d7a8b0bccb88ac11f45874172f3847eb8b92654aaa58a3d2b8dc7833019c111f36ad3fc1d9b7a7a14344314d2864b94f030594cd67f753ef774a1efb2039907fe37f08d10739255141bb066c506a12f7d1e8dfec21abc58494705b6f }",
  "salted_initialization_hash": "SaltedInitializationHash { inner: 0x222d697ec3c42432bba23ee114f269a711025d4d323c459582b3a41bfe083a5b }",
}
`;

exports[`Data generation for noir tests Computes contract info for parentContract 1`] = `
{
  "address": "AztecAddress { inner: 0x133d2a70cd794f5827d9215316157ff9d7d2d55dc6902462f0ef488669fb1d2c }",
  "artifact_hash": "0x00000000000000000000000000000000000000000000000000000000000004bc",
  "contract_address_salt": "0x0000000000000000000000000000000000000000000000000000000000001618",
  "contract_class_id": "ContractClassId { inner: 0x02e154ebfbb5396ce55d8b1c36beb95698563363a742edb04ab51ea21a541747 }",
  "deployer": "AztecAddress { inner: 0x0000000000000000000000000000000000000000000000000000000000000000 }",
  "partial_address": "PartialAddress { inner: 0x0fa035b337962b083185bc8b14e7490255383d0107ea658e24f46a097bc9a0ba }",
  "private_functions_root": "0x2727db9f811c8f991a27d77b79a7771f4def75af526771ade032ff9771eb7ece",
  "public_bytecode_commitment": "0x1cfb8e870870be1d102249b47923b63c2d54f33ca81e3028d74a06d8dd5944ca",
  "public_keys": "PublicKeys { inner: 0x01498945581e0eb9f8427ad6021184c700ef091d570892c437d12c7d90364bbd170ae506787c5c43d6ca9255d571c10fa9ffa9d141666e290c347c5c9ab7e34400c044b05b6ca83b9c2dbae79cc1135155956a64e136819136e9947fe5e5866c1c1f0ca244c7cd46b682552bff8ae77dea40b966a71de076ec3b7678f2bdb1511b00316144359e9a3ec8e49c1cdb7eeb0cedd190dfd9dc90eea5115aa779e287080ffc74d7a8b0bccb88ac11f45874172f3847eb8b92654aaa58a3d2b8dc7833019c111f36ad3fc1d9b7a7a14344314d2864b94f030594cd67f753ef774a1efb2039907fe37f08d10739255141bb066c506a12f7d1e8dfec21abc58494705b6f }",
  "salted_initialization_hash": "SaltedInitializationHash { inner: 0x277a14ecf6d685df4a8c6477491094f8842421a21bde3d7dae376d64e4b9c45f }",
}
`;

exports[`Data generation for noir tests Computes contract info for updatedContract 1`] = `
{
  "address": "AztecAddress { inner: 0x1f817c95da25b3c74ea1b2ab492db7cc43a3cb420e4419e354e2de3ceb241903 }",
  "artifact_hash": "0x0000000000000000000000000000000000000000000000000000000000054501",
  "contract_address_salt": "0x0000000000000000000000000000000000000000000000000000000000000315",
  "contract_class_id": "ContractClassId { inner: 0x141a337331c021cb2fa9cd5d586311dce7b421424c9ae7877925c0052577306c }",
  "deployer": "AztecAddress { inner: 0x0000000000000000000000000000000000000000000000000000000000000000 }",
  "partial_address": "PartialAddress { inner: 0x2b61692bee0abcbd543cce139745188e43a68d7438b768a8a930f3ba550f924e }",
  "private_functions_root": "0x0ad5db0b1e6d6b34f0b7e8b92e4975c5cc8320d7789bd4d18065ca76542956c8",
  "public_bytecode_commitment": "0x225d884cfeaddc5292dadbf921e7699632336876c65a33459d3b2ad9b5ec0da3",
  "public_keys": "PublicKeys { inner: 0x01498945581e0eb9f8427ad6021184c700ef091d570892c437d12c7d90364bbd170ae506787c5c43d6ca9255d571c10fa9ffa9d141666e290c347c5c9ab7e34400c044b05b6ca83b9c2dbae79cc1135155956a64e136819136e9947fe5e5866c1c1f0ca244c7cd46b682552bff8ae77dea40b966a71de076ec3b7678f2bdb1511b00316144359e9a3ec8e49c1cdb7eeb0cedd190dfd9dc90eea5115aa779e287080ffc74d7a8b0bccb88ac11f45874172f3847eb8b92654aaa58a3d2b8dc7833019c111f36ad3fc1d9b7a7a14344314d2864b94f030594cd67f753ef774a1efb2039907fe37f08d10739255141bb066c506a12f7d1e8dfec21abc58494705b6f }",
  "salted_initialization_hash": "SaltedInitializationHash { inner: 0x02b91db090444ca006f9effeaa6fde13bae8f7b4b4eae439e24d711a69fce428 }",
}
`;

exports[`Data generation for noir tests Computes function tree for the private functions 1`] = `
{
  "data": "FunctionData { selector: FunctionSelector { inner: 0x000f69b5 }, is_private: true }",
  "membership_witness": "MembershipWitness {
        leaf_index: 0,
        sibling_path: [
0x0946489a51e1af5ea7f2e85a17cf2691a446760d8751199208b49acf72e1c0c7,
0x0e34ac2c09f45a503d2908bcb12f1cbae5fa4065759c88d501c097506a8b2290,
0x21f9172d72fdcdafc312eee05cf5092980dda821da5b760a9fb8dbdf607c8a20,
0x2373ea368857ec7af97e7b470d705848e2bf93ed7bef142a490f2119bcf82d8e,
0x120157cfaaa49ce3da30f8b47879114977c24b266d58b0ac18b325d878aafddf,
0x01c28fe1059ae0237b72334700697bdf465e03df03986fe05200cadeda66bd76,
0x2d78ed82f93b61ba718b17c2dfe5b52375b4d37cbbed6f1fc98b47614b0cf21b
],
    }",
  "vk_hash": "0x000000000000000000000000000000000000000000000000000000000001e0f3",
}
`;

exports[`Data generation for noir tests Computes function tree for the private functions 2`] = `
{
  "data": "FunctionData { selector: FunctionSelector { inner: 0x00051a77 }, is_private: true }",
  "membership_witness": "MembershipWitness {
        leaf_index: 0,
        sibling_path: [
0x0b63a53787021a4a962a452c2921b3663aff1ffd8d5510540f8e659e782956f1,
0x0e34ac2c09f45a503d2908bcb12f1cbae5fa4065759c88d501c097506a8b2290,
0x21f9172d72fdcdafc312eee05cf5092980dda821da5b760a9fb8dbdf607c8a20,
0x2373ea368857ec7af97e7b470d705848e2bf93ed7bef142a490f2119bcf82d8e,
0x120157cfaaa49ce3da30f8b47879114977c24b266d58b0ac18b325d878aafddf,
0x01c28fe1059ae0237b72334700697bdf465e03df03986fe05200cadeda66bd76,
0x2d78ed82f93b61ba718b17c2dfe5b52375b4d37cbbed6f1fc98b47614b0cf21b
],
    }",
  "vk_hash": "0x00000000000000000000000000000000000000000000000000000000000c0d1d",
}
`;

exports[`Data generation for noir tests Computes function tree for the private functions 3`] = `
{
  "data": "FunctionData { selector: FunctionSelector { inner: 0x000f69b5 }, is_private: true }",
  "membership_witness": "MembershipWitness {
        leaf_index: 0,
        sibling_path: [
0x1260f4354ff916029a970f9d72fea65c206f1a7be4b8f2864eea26d90dd66caf,
0x0e34ac2c09f45a503d2908bcb12f1cbae5fa4065759c88d501c097506a8b2290,
0x21f9172d72fdcdafc312eee05cf5092980dda821da5b760a9fb8dbdf607c8a20,
0x2373ea368857ec7af97e7b470d705848e2bf93ed7bef142a490f2119bcf82d8e,
0x120157cfaaa49ce3da30f8b47879114977c24b266d58b0ac18b325d878aafddf,
0x01c28fe1059ae0237b72334700697bdf465e03df03986fe05200cadeda66bd76,
0x2d78ed82f93b61ba718b17c2dfe5b52375b4d37cbbed6f1fc98b47614b0cf21b
],
    }",
  "vk_hash": "0x0000000000000000000000000000000000000000000000000000000000001e6c",
}
`;
